# Induspot

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  logging.py  pinecone.py  supabase.py
apps/api/app/routers/: recommendations.py
apps/api/app/services/: pinecone_service.py
apps/api/app/services/tttv/: preference.py  score.py  travel.py  wait_time.py
apps/api/tests/services/: test_tttv.py
apps/web/: .env.local.example  package-lock.json  package.json
apps/web/app/: global.css  layout.tsx  page.tsx
apps/web/app/worker/map/: page.tsx
apps/web/app/worker/recommend/: page.tsx
apps/web/components/map/: CongestionMap.tsx
apps/web/lib/: api-client.ts  supabase.ts
migrations/: 001_init.sql  003_seed.sql  01_init.sql
samples/: dummy.csv  gumi_facilities.csv
scratch/: check_db.py  convert_gumi.py  generate_logs.py  upload_gumi.py  upsert_dummy.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20250523120000_init.sql  20250523120001_rls.sql  20250523120002_seed.sql
